Add Railway deployment configs (Dockerfiles, prod env, dynamic CORS)
- backend/Dockerfile: multi-stage Maven build -> JRE runtime
- frontend/Dockerfile: multi-stage npm build -> nginx static serve
  (nginx.conf handles Angular SPA routing fallback)
- application.properties: DATABASE_URL/USERNAME/PASSWORD env vars for
  prod (Railway MySQL), PORT env var for the server port
- SecurityConfig: CORS_ALLOWED_ORIGINS env var appended to the
  allowed-origin patterns list (alongside localhost/vercel/railway)
- frontend: environments/ + angular.json fileReplacements so the
  production build points at the deployed backend URL; all services
  now read environment.apiBaseUrl instead of a hardcoded localhost URL

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019YsdsVMnUJn2RzgjrQJT1x